--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
 
 <section class="sekcja_o_polskiej_kuchni">
     <H3>Kuchina Polska</H3>
+    <h2>Marcin!!</h2>
     <img src="Schabowy_Gniezno.jpg" alt="Schabowy_Gniezno.jpg">
 </section>
 
